--- a/home.html
+++ b/home.html
@@ -8,6 +8,20 @@
     <title>کدآموز</title>
 </head>
 <body>
-    
+    <div id="headlogo">
+        <p>کدآموز</p>
+        <img src="bglogo.png" alt="icon" class="tech-brain-logo">
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="home.html">خانه</a>
+        <a href="codejs.html">محیط کد جاوااسکریپت</a>
+        <a href="codehc.html">HTML CSS محیط کد</a>
+        <!-- <a href="#">Contact</a> -->
+      </div>
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+      </div>
+      <script src="home.js"></script>
 </body>
 </html>
