--- a/home.html
+++ b/home.html
@@ -1,27 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="shortcut icon" href="tech_brain_with_white_color.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="home.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>کدآموز</title>
+  <meta charset="UTF-8">
+  <link rel="shortcut icon" href="tech_brain_with_white_color.jpg" type="image/x-icon">
+  <link rel="stylesheet" href="home.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>کدآموز | آموزش برنامه نویسی</title>
 </head>
+
 <body>
-    <div id="headlogo">
-        <p>کدآموز</p>
-        <img src="bglogo.png" alt="icon" class="tech-brain-logo">
-    </div>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="home.html">خانه</a>
-        <a href="codejs.html">محیط کد جاوااسکریپت</a>
-        <a href="codehc.html">HTML CSS محیط کد</a>
-        <!-- <a href="#">Contact</a> -->
-      </div>
-      <div id="main">
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-      </div>
-      <script src="home.js"></script>
+  <div id="headlogo">
+    <p>کدآموز</p>
+    <a href="home.html"> <img src="bglogo.png" alt="icon" class="tech-brain-logo"></a>
+  </div>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="home.html">خانه</a>
+    <a href="codejs.html">محیط کد جاوااسکریپت</a>
+    <a href="codehc.html">HTML CSS محیط کد</a>
+    <a href="sign.html">ثبت نام / ورود</a>
+    <!-- <a href="#">Contact</a> -->
+  </div>
+  <div id="main">
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+  </div>
+  <div id="starting">
+    <h1>کدآموز محیطی برای یادگیری برنامه نویسی<br>به صورت زنده و دارای محیط کد</h1>
+  </div>
+  <div class="saysmt">
+    <p>یادگیری آسان و کوتاه برنامه نویسی <br>! با کد آموز</p>
+  </div>
+  <div class="namacode">
+    <h1>HTML CSS نمایی از محیط کد</h1>
+    <img src="nama2.png" alt="nama2" class="htmlcode-img">
+  </div>
+  <div class="startnow">
+    <a href="index.html"><button onclick="btn" class="start-btn">HTML CSS شروع یادگیری</button></a>
+  </div>
+  <!-- add  -->
+
+  <div id="ui">
+    <ul>
+      <li><a href="home.html">صفحه اصلی</a></li>
+      <li><a href="index.html">HTML CSS شروع یادگیری</a></li>
+      <li><a href="codejs.html">محیط کد جاوا اسکریپت</a></li>
+      <li><a href="codehc.html">HTML CSS محیط کد</a></li>
+      <a href="sign.html"><button onclick="btn" class="ls-btn">ثبت نام / ورود</button></a>
+    </ul>
+  </div>
+
+  <div id="letusgo">
+    <h1>کدآموز محیطی برای یادگیری برنامه نویسی<br>به صورت زنده و دارای محیط کد</h1>
+  </div>
+  <div class="sayplus">
+  <p>! یادگیری آسان و کوتاه برنامه نویسی با کدآموز</p>
+  </div>
+  <div class="namacode-responsive">
+    <h2 class="h-change">HTML CSS نمایی از محیط کد</h2>
+    <img src="nama1.png" alt="nama" class="nama-res">
+  </div>
+  <div class="starth-c">
+ <a href="index.html">   <button onclick="btn" class="s-h-c">HTML CSS شروع یادگیری</button></a>
+  </div>
+  <script src="home.js"></script>
 </body>
+
 </html>
